--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "first-sample",
   "version": "0.1.0",
-  "homepage": "https://Iphycodes.github.io/monsters-rolodex",
+  "homepage": "https://Iphycodes.github.io/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"  
   },
   "eslintConfig": {
     "extends": [
